@@ -1,3 +1,8 @@
+2010-03-31  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-load-wsdl-from-url): check that we have
+	retrieved an XML document before passing it to `xml-parse-region'
+
 2010-02-11  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* jira2.el (jira2-do-jql-search, jira2-get-available-actions)
